src/stylesheets/main.scss
@import '~sn-stylekit/dist/stylekit.css';
@import 'material-icons/iconfont/material-icons.css';
@import '@fontsource/roboto';
@import 'katex/dist/katex.min.css';
@import 'prism/material-light.css';

:root {
  --sn-stylekit-monospace-font: SFMono-Regular, Consolas, Liberation Mono, Menlo,
    'Ubuntu Mono', courier, monospace;
}

body,
html {
  background-color: transparent;
  background-color: var(--sn-stylekit-background-color);
  font-family: var(--sn-stylekit-sans-serif-font);
  font-size: var(--sn-stylekit-font-size-editor);
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

* {
  // To prevent gray flash when focusing input on mobile Safari
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

#root {
  height: 100%;
}

.sn-component {
  display: flex;
  flex-direction: column;
  font-size: var(--sn-stylekit-font-size-editor);
  min-height: 100vh;
  @media screen and (max-width: 420px) {
    min-height: -webkit-fill-available;
  }
}

.container {
  flex: 1;
  flex-grow: 1;
  display: flex;
  width: 100%;
  height: 100%;

  > .separator {
    background-color: var(--sn-stylekit-border-color);
  }
}

.container.horizontal {
  flex-direction: row;
  overflow-x: clip;

  .column {
    flex: 1;
  }

  .separator {
    width: 10px;
  }
}

.container.vertical {
  flex-direction: column;
  overflow-y: clip;

  .row.full {
    height: 100%;
  }

  .row.half {
    height: 40%;
  }

  .separator {
    height: 1%;
  }

  .row.half:last-child {
    height: 59%;
  }
}

